--- a/Radzen.Blazor/themes/components/blazor/_tile-layout.scss
+++ b/Radzen.Blazor/themes/components/blazor/_tile-layout.scss
@@ -94,6 +94,7 @@ $tile-overlay-background-color: var(--rz-primary-lighter) !default;
 
 .rz-tile-layout-item-title {
   flex: 1;
+  margin: 0;
   min-width: 0;
   overflow: hidden;
   text-overflow: ellipsis;
